--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,64 @@
-.contact .link {
+/* backgdr-col #E5E5E5, #F5F4FA;
+backgdr-col head #fff
+цвет осн текста #757575
+active col #2196F3
+фон героя и футера #2F303A
+фон сеекции #F5F4FA 
+
+*/
+body {
+  color: #757575;
+}
+a {
+  text-decoration: none;
+}
+.list {
+  list-style: none;
+}
+.section-title {
+  color: #212121;
+}
+.item-title {
+  color: #212121;
+}
+.item-inform {
+  color: #757575;
+}
+/* header start */
+.logo {
+  color: #000000;
+}
+.logo-part {
+  color: #2196f3;
+}
+
+.nav .link {
+  color: #212121;
+}
+.nav .link:hover,
+.nav .link:focus {
+  color: #2196f3;
+}
+.contacts .link {
+  color: #757575;
+}
+.contacts .link:hover,
+.contacts .link:focus {
+  color: #2196f3;
+}
+/* Header end */
+/* Sections start */
+.menu .btn {
+  color: #212121;
+  background-color: #f5f4fa;
+}
+.menu .btn:hover,
+.menu .btn:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+/* Hero sect start */
+.hero .btn {
+  color: #ffffff;
+  background-color: #2196f3;
 }
