--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,7 @@ a {
   list-style: none;
 }
 .section-title {
-  color: var(--primary-text-color);
-}
-.item-title {
   color: var(--title-text-color);
-}
-.item-inform {
-  color: var(--primary-text-color);
 }
 /* header start */
 .logo {
@@ -51,8 +45,26 @@ a {
 .contacts .link:focus {
   color: var(--accent-color);
 }
-/* Header end */
-/* Sections start */
+/* Hero sect start */
+.hero .btn {
+  color: #ffffff;
+  background-color: var(--accent-color);
+}
+/* Benefits */
+.benefits .title {
+  color: var(--title-text-color);
+}
+.benefits .inform {
+  color: var(--primary-text-color);
+}
+/* Our-team */
+.our-team .title {
+  color: var(--title-text-color);
+}
+.our-team .inform {
+  color: var(--primary-text-color);
+}
+/* Menu */
 .menu .btn {
   color: #212121;
   background-color: #f5f4fa;
@@ -62,8 +74,10 @@ a {
   color: #ffffff;
   background-color: var(--accent-color);
 }
-/* Hero sect start */
-.hero .btn {
-  color: #ffffff;
-  background-color: var(--accent-color);
+/* Catalog */
+.catalog .title {
+  color: var(--title-text-color);
+}
+.catalog .inform {
+  color: var(--primary-text-color);
 }
