--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,6 @@ active col #2196F3
 фон сеекции #F5F4FA 
 */
 
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-}
-
-body {
-  color: var(--primary-text-color);
-}
-.list {
-  list-style: none;
-}
-.section-title {
-  color: var(--title-text-color);
-}
 /* header start */
 .logo {
   color: #000000;
@@ -30,6 +15,9 @@ body {
 }
 .nav .link {
   color: #212121;
+}
+.nav .link.current {
+  color: var(--accent-color);
 }
 .nav .link:hover,
 .nav .link:focus {
@@ -78,3 +66,4 @@ body {
 .catalog .inform {
   color: var(--primary-text-color);
 }
+/* button */
