--- a/css/common.css
+++ b/css/common.css
@@ -6,10 +6,16 @@
 
 body {
   color: var(--primary-text-color);
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.03em;
 }
 .list {
   list-style: none;
 }
 .section-title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.25;
+  text-align: center;
 }
