--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,30 @@ backgdr-col head #fff
 active col #2196F3
 фон героя и футера #2F303A
 фон сеекции #F5F4FA 
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
+bold = 700
+normal = 400
 */
 
 /* header start */
 .logo {
   color: #000000;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
 }
 .logo-part {
   color: var(--accent-color);
 }
 .site-nav .link {
-  color: #212121;
+  color: var(--title-text-color);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .site-nav .link.current {
   color: var(--accent-color);
@@ -25,6 +38,7 @@ active col #2196F3
 }
 .contacts .link {
   color: var(--primary-text-color);
+  text-decoration: none;
 }
 .contacts .link:hover,
 .contacts .link:focus {
@@ -34,22 +48,56 @@ active col #2196F3
 .hero .btn {
   color: #ffffff;
   background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.hero .title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+  background-color: var(--title-text-color);
 }
 /* Benefits */
 .benefits .title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 .benefits .inform {
   color: var(--primary-text-color);
+  font-size: 14px;
+  line-height: 1.7;
 }
 /* Our-team */
 .our-team .title {
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+.our-team a {
+  text-decoration: none;
 }
 .our-team .inform {
   color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.18;
 }
 /* Menu */
+.btn {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 1.6;
+}
 .menu .btn {
   color: #212121;
   background-color: #f5f4fa;
@@ -60,10 +108,37 @@ active col #2196F3
   background-color: var(--accent-color);
 }
 /* Catalog */
+.catalog a {
+  text-decoration: none;
+}
 .catalog .title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 .catalog .inform {
   color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.8;
 }
-/* button */
+/* Footer */
+.address .link {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+footer .logo {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  /* identical to box height */
+
+  letter-spacing: 0.03em;
+
+  color: #FFFFF;
+}
