--- a/css/common.css
+++ b/css/common.css
@@ -3,8 +3,16 @@
   --title-text-color: #212121;
   --accent-color: #2196f3;
 }
-
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
+  margin: 0;
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
