--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif;
 bold = 700
 normal = 400
+container(Studio) wigth 1700+30px
+pading l+r = 15px
 */
 
 /* header start */
@@ -84,6 +86,9 @@ normal = 400
   font-size: 16px;
   line-height: 1.18;
 }
+.our-team .item {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
 .our-team .inform {
   color: var(--primary-text-color);
   font-size: 16px;
@@ -91,9 +96,14 @@ normal = 400
 }
 /* Menu */
 .btn {
+  color: var(--title-text-color);
+  background-color: #f5f4fa;
   font-family: inherit;
   font-size: 16px;
   line-height: 1.6;
+  padding: 6px 22px;
+  border-radius: 4px;
+  border: transparent;
 }
 .menu-list .btn {
   color: var(--title-text-color);
@@ -119,6 +129,9 @@ normal = 400
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.8;
+}
+.catalog-list .item {
+  border: 1px solid #eeeeee;
 }
 /* Footer */
 .address .link {
