--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ bold = 700
 normal = 400
 container(Studio) wigth 1700+30px
 pading l+r = 15px
+
 */
 /* ------- */
 :root {
@@ -18,11 +19,13 @@ pading l+r = 15px
   --accent-color: #2196f3;
   --first-btn-color: #f5f4fa;
   --main-light-color: #ffffff;
+  --primary-bg-color: #2f303a;
+  --logo-text-color: #000000;
+  --border-line-color: #eeeeee;
 }
 body {
   background-color: var(--main-light-color);
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.7;
 }
@@ -37,64 +40,59 @@ body {
   text-align: center;
 }
 .link.contact:hover,
-.link.contact:focus {
+.link.contact:focus,
+.nav-link:hover,
+.nav-link:focus,
+.contact:hover,
+.contact:focus,
+.nav-link.current,
+.logo-part {
   color: var(--accent-color);
 }
-.btn {
-  color: var(--title-text-color);
-  background-color: var(--first-btn-color);
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 1.6;
-  padding: 6px 22px;
-  border-radius: 4px;
-  border: transparent;
-  cursor: pointer;
-}
 /* header start */
-.logo {
-  color: #000000;
+.header-logo,
+.footer-logo {
+  color: var(--logo-text-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
 }
-.logo-part {
-  color: var(--accent-color);
+.header-contacts-link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
-.site-nav .link {
+.nav-link {
   color: var(--title-text-color);
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.site-nav .link.current,
-.btn-current {
-  color: var(--accent-color);
-}
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-color);
-}
-.contacts .link {
+.header-contacts-link {
   color: var(--primary-text-color);
   text-decoration: none;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-weight: 500;
 }
 /* Hero sect start */
-.hero .title {
+.hero {
+  background-color: var(--primary-bg-color);
+}
+.hero-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
-  color: #ffffff;
-  background-color: var(--title-text-color);
+  color: var(--main-light-color);
 }
-.hero .btn {
-  color: #ffffff;
+.hero-btn {
+  color: var(--main-light-color);
   background-color: var(--accent-color);
   font-weight: 700;
   font-size: 16px;
@@ -103,77 +101,83 @@ body {
   text-align: center;
 }
 /* Benefits */
-.benefits .title {
+.benefits-subtitle {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
 }
-.benefits .inform {
+.benefits-info {
   color: var(--primary-text-color);
-  font-size: 14px;
-  line-height: 1.7;
 }
 /* Our-team */
 .our-team {
   background: #f5f4fa;
 }
-.our-team .title {
+.team-name {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
 }
-.our-team .inform {
+.team-positions {
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.18;
 }
-/* Menu */
+/* filter */
 
-.menu-list .btn {
+.filter-btn {
   color: var(--title-text-color);
-  background-color: #f5f4fa;
+  background-color: var(--first-btn-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  border: transparent;
+  border-radius: 4px;
+  cursor: pointer;
 }
-.menu-list .btn:hover,
-.menu-list .btn:focus {
-  color: #ffffff;
+.filter-btn:hover,
+.filter-btn:focus,
+.btn-current {
+  color: var(--main-light-color);
   background-color: var(--accent-color);
 }
-/* Catalog */
-.catalog a {
+/* Portfolio */
+.portfolio-link {
+  font-style: inherit;
   text-decoration: none;
-}
-.catalog .title {
   color: var(--title-text-color);
+}
+.portfolio-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.catalog .inform {
+.portfolio-info {
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.8;
 }
-.catalog-list .item {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
+.portfolio-list {
+  background: var(--main-light-color);
+  border: 1px solid var(--border-line-color);
 }
 /* Footer */
-.page-footer {
-  background: #2f303a;
+.footer {
+  background: var(--primary-bg-color);
 }
-.address .link {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
+.footer-address {
+  font-style: inherit;
+}
+.address-link {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
 }
-.page-footer .logo {
-  color: #fff;
-  background-color: #2f303a;
+.footer-logo,
+.address-link.map {
+  text-decoration: none;
+  color: var(--main-light-color);
+  background-color: var(--second-bg-color);
 }
