--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ body {
   font-weight: 700;
   line-height: 1.8;
   letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* Benefits */
