--- a/css/style.css
+++ b/css/style.css
@@ -81,13 +81,13 @@ body {
   color: var(--logo-text-color);
 }
 .nav-link,
-.header-contacts-link {
+.header-link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.header-contacts-link {
+.header-link {
   color: inherit;
 }
 
