--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,10 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+.portfolio-item {
+  border: 1px solid #eeeeee;
+}
+
 .portfolio-link {
   text-decoration: none;
   font-style: inherit;
