--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ body {
 .nav-link:focus,
 .contact:hover,
 .contact:focus,
+.address-link.map:hover,
+.address-link.map:focus,
 .nav-link.current,
 .logo-part {
   color: var(--accent-color);
